# image-comp-lib-rust

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  README.md  build.sh
.github/: dependabot.yml
.github/workflows/: doc.yml  release.yml  rust.yml
benches/: img_1.rs  img_2.rs  img_3.rs  img_4.rs
src/: debug.rs  lib.rs  main.rs  test.rs
src/decode/: decoder.rs  lists.rs  mod.rs
src/decode/compress/: compressors.rs  deflate.rs  mod.rs
src/decode/construct/: cluster_colors.rs  lists.rs  mod.rs
src/encode/: encode.rs  mod.rs
src/encode/clustering/: cluster_color.rs  clustering_methods.rs  gen_point_cloud.rs  mod.rs
src/encode/compress/: compressors.rs  deflate.rs
src/encode/flatten/: cluster_colors.rs  lists.rs
src/encode/grid/: grid_obj.rs  grid_ops.rs  mod.rs
src/io/: img_obj.rs  load_image.rs  mod.rs
