[package]
name = "image_comp"
version = "0.1.0"
authors = ["Hannes Furmans <hannes.furmans@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "image_comp"
path = "src/lib.rs"

[[bin]]
name = "image-compressor"
path = "src/main.rs"

[dependencies]
ndarray = "0.14.0"
image = "0.23.12"
nshare = {version = "0.2.0", features=["image", "ndarray"]}
rdrand = "0.7.0"
cogset = "0.2.0"
bytes = "1.0.1"
libflate = "1.0.3"
average = "0.10.6"
zstd = "0.6.0+zstd.1.4.8"
num_cpus = "1.13.0"