[package]
name = "image_comp"
version = "0.1.0"
authors = ["Hannes Furmans <hannes.furmans@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "image_comp"
path = "src/lib.rs"

[[bin]]
name = "image-compressor"
path = "src/main.rs"

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
lto = true

[profile.test]
opt-level = 3
overflow-checks = false

[profile.bench]
overflow-checks = false
lto = true

[dependencies]
ndarray = "0.14.0"
image = "0.23.12"
nshare = {version = "0.2.0", features=["image", "ndarray"]}
rdrand = "0.8.0"
bytes = "1.0.1"
libflate = "1.0.3"
average = "0.13.1"
zstd = {version = "0.9.0+zstd.1.4.8", features=["thin"]}
kmeans = "0.2.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "img_1"
harness = false

[[bench]]
name = "img_2"
harness = false

[[bench]]
name = "img_3"
harness = false

[[bench]]
name = "img_4"
harness = false

[features]
debug-out-img = []